--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import AboutExperience from "../components/about-experience.astro";
         <h1
           class="mb-5 text-2xl font-bold leading-tight  md:text-4xl  dark:text-white"
         >
-          Hello, <br/><span class="dark:text-pink-200 text-4xl lg:text-6xl">I'm Preethi</span>
+          Hell, <br/><span class="dark:text-pink-200 text-4xl lg:text-6xl">I'm Preethi</span>
         </h1>
         <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
           As a Front-End Developer with 5 years of experience, I specialize in building intuitive and visually appealing user interfaces.
